--- a/docs/custom/distanceMatrix.yml
+++ b/docs/custom/distanceMatrix.yml
@@ -2,7 +2,7 @@ openapi: 3.0.3
 info:
   title: Distance Matrix APIs
   description: >-
-    <br><br> <strong>Global Coverage</strong> Now Available ! <br>Distance Matrix API is **Now Available**  for [238 countries](https://github.com/mappls-api/mappls-rest-apis/blob/main/docs/countryISO.md) across the world.<br><br>**Note**: <ol> <li> The response listed in the below documentation is ONLY indicative of the overall capabilities of Mappls's Search APIs. </li><li> Not all response parameters mentioned in the below documentation is assured to be present in all the use-cases. The response of any of the below search API is thus, dependent on the use-case agreed upon between Mappls & it's API consumer. </i><li> For any further clarifications on what all of the response structure is available for your use case, please contact your business relationship manager or contact Mappls API support.</li><li> <strong>PREMIUM APIs</strong> are not available for evalulation on signup. To get access, please contact API Support.</li></ol>
+    Before using the API in the your solution, please ensure that the related access is enabled in the [Mappls Console](https://auth.mappls.com/console/), within your app - be it for Mobile OR Web or Cloud integration.<br><ol><li>Copy and paste the key from your `credentials` section from your API [keys](https://auth.mappls.com/console/) into the `access_token` query parameter.</li><br><ul><li>Your static key can be secured by whitelisting its usage for particular IPs (in case of cloud app usage) OR a set of domains (in case of a web app).</li><br><li>Your static key obtained from your Console is to be passed as a query parameter: `access_token`.</li></ul></ol><br> <strong>Global Coverage</strong> Now Available ! <br>Distance Matrix API is **Now Available**  for [238 countries](https://github.com/mappls-api/mappls-rest-apis/blob/main/docs/countryISO.md) across the world.<br><br>**Note**: <ol> <li> The response listed in the below documentation is ONLY indicative of the overall capabilities of Mappls's Search APIs. </li><li> Not all response parameters mentioned in the below documentation is assured to be present in all the use-cases. The response of any of the below search API is thus, dependent on the use-case agreed upon between Mappls & it's API consumer. </i><li> For any further clarifications on what all of the response structure is available for your use case, please contact your business relationship manager or contact Mappls API support.</li><li> <strong>PREMIUM APIs</strong> are not available for evalulation on signup. To get access, please contact API Support.</li></ol>
   termsOfService: 'https://about.mappls.com/api/terms-&-conditions'
   version: 1.0.0
   license:
@@ -12,11 +12,13 @@ info:
     name: Mappls API Support
     email: apisupport@mappls.com
     url: https://about.mappls.com/api/
+security: 
+  - staticKeyAuth: []
 servers:
-  - url: https://apis.mappls.com/advancedmaps/v1
+  - url: https://route.mappls.com/route/dm
     description: 'Live Prod server for Distance Matrix APIs'
 paths:
-  /{rest-key}/{resources}/{profile}/{geopositions}:
+  /{resources}/{profile}/{geopositions}:
     get: 
       tags: 
         - Distance Matrix APIs
@@ -26,15 +28,8 @@ paths:
       summary: Distance Matrix API
       operationId: dmAPI
       parameters: 
-        - name: rest-key
-          in: path
-          description: 'The REST API licence key allocated to you by signing into our services and registering yourself as a developer.'
-          allowEmptyValue: false
-          required: true
-          example: "threstapikeywillcomeheretoaccess"
-          schema:
-            type: string
         - name: resources
+          required: true
           in: path
           description: >-
             The different resources available within Mappls Distance Matrix API. These resources have their own individual allocations and not all are allocated for evalulations be default. <br>For allocating particular resource on your API credentials, please contact <code>apisupport@mappls.com</code>
@@ -83,7 +78,6 @@ paths:
                       </table>
                     </div>
           allowEmptyValue: false
-          required: true
           example: "distance_matrix_eta"
           schema:
             type: string
@@ -283,3 +277,8 @@ components:
           type: array
           items: 
             example: [1884.9, 2644.1]
+  securitySchemes:
+    staticKeyAuth: 
+      type: apiKey
+      in: query
+      name: access_token
