--- a/docs/custom/geocode.yml
+++ b/docs/custom/geocode.yml
@@ -2,7 +2,7 @@ openapi: 3.0.3
 info:
   title: Geocode API
   description: >-
-    This APIs follow OAuth2 based security. **To know more on how to create your authorization tokens, please use our authorization token URL. More details available**  [here](https://github.com/mappls-api/mappls-rest-apis/tree/main/mappls-token-generation-api).<br><br>The API leverages OAuth 2.0 based security. Hence, the developer would need to send a request for access token using their client_id and client_secret to the OAuth API. Once validated from the OAuth API, the access_token and the token_type need to be sent as Authorization header with the value: "{`token_type`} {`access_token`}”. <br><strong>Authorization</strong>: `token_type` `access_token`.<br><br> <strong>Global Coverage</strong> Now Available ! <br>Geocode API is **Now Available**  for [238 countries](https://github.com/mappls-api/mappls-rest-apis/blob/main/docs/countryISO.md) across the world.<br><br> **Note**: <ol> <li> The response listed in the below documentation is ONLY indicative of the overall capabilities of Mappls's Search APIs. </li><li> Not all response parameters mentioned in the below documentation is assured to be present in all the use-cases. The response of any of the below search API is thus, dependent on the use-case agreed upon between Mappls & it's API consumer. </i><li> For any further clarifications on what all of the response structure is available for your use case, please contact your business relationship manager or contact Mappls API support.</li><li> <strong>PREMIUM APIs/Parameters</strong> are not available for evalulation on signup. To get access, please contact API Support.</li></ol>
+    Before using the API in the your solution, please ensure that the related access is enabled in the [Mappls Console](https://auth.mappls.com/console/), within your app - be it for Mobile OR Web or Cloud integration.<br><ol><li>Copy and paste the key from your `credentials` section from your API [keys](https://auth.mappls.com/console/) into the `access_token` query parameter.</li><br><ul><li>Your static key can be secured by whitelisting its usage for particular IPs (in case of cloud app usage) OR a set of domains (in case of a web app).</li><br><li>Your static key obtained from your Console is to be passed as a query parameter: `access_token`.</li></ul></ol><br> <strong>Global Coverage</strong> Now Available ! <br>Geocode API is **Now Available**  for [238 countries](https://github.com/mappls-api/mappls-rest-apis/blob/main/docs/countryISO.md) across the world.<br><br> **Note**: <ol> <li> The response listed in the below documentation is ONLY indicative of the overall capabilities of Mappls's Search APIs. </li><li> Not all response parameters mentioned in the below documentation is assured to be present in all the use-cases. The response of any of the below search API is thus, dependent on the use-case agreed upon between Mappls & it's API consumer. </i><li> For any further clarifications on what all of the response structure is available for your use case, please contact your business relationship manager or contact Mappls API support.</li><li> <strong>PREMIUM APIs/Parameters</strong> are not available for evalulation on signup. To get access, please contact API Support.</li></ol>
   termsOfService: 'https://about.mappls.com/api/terms-&-conditions'
   version: 1.0.0
   license:
@@ -13,24 +13,24 @@ info:
     email: apisupport@mappls.com
     url: https://about.mappls.com/api/
 servers:
-  - url: 'https://atlas.mappls.com'
-    description: 'Live Prod server for OAuth 2 based APIs'
+  - url: 'https://search.mappls.com'
+    description: 'Live Prod server for APIs'
 security: 
-  - BearerAuth: []
+  - staticKeyAuth: []
 paths:
-  /api/places/geocode:
+  /search/address/geocode:
     get:
       tags:
         - Geocode API
       description: >-
-        All mapping APIs that are used in mobile or web apps need some geo-position coordinates to refer to any given point on the map. Our Geocoding API converts real addresses into these geographic reference positions to be placed on a map, be it for any street, area, postal code, POI or a house number etc.<br>This APIs follow OAuth2 based security. **To know more on how to create your authorization tokens, please use our authorization token URL. More details available**  [here](https://github.com/mappls-api/mappls-rest-apis/tree/main/mappls-token-generation-api).
-        <p style=text-align:right><strong><a href="https://www.mapmyindia.com/api/advanced-maps/doc/sample/mapmyindia-vector-maps-atlas-geocoding-rest-api-example.php">Live Demo</a></p>
+        All mapping APIs that are used in mobile or web apps need some geo-position coordinates to refer to any given point on the map. Our Geocoding API converts real addresses into these geographic reference positions to be placed on a map, be it for any street, area, postal code, POI or a house number etc.
+        <p style=text-align:right><strong><a href="https://about.mappls.com/api/advanced-maps/doc/sample/mapmyindia-vector-maps-atlas-geocoding-rest-api-example.php">Live Demo</a></p>
       summary: >-
         Geocode API
       operationId: AtlasGeocodeAPI
       servers:
-        - url: https://atlas.mappls.com
-          description: 'Live Prod server for OAuth 2 based APIs'
+        - url: https://search.mappls.com
+          description: 'Live Prod server for APIs'
       parameters:
         - name: region
           in: query
@@ -59,10 +59,11 @@ paths:
           example: 1
         - name: bias
           in: query
-          description: 'This parameter can be used to set Urban or Rural bias. A positive value sets the Urban bias and a negative value sets Rural bias. This optional parameter & its related effect on response is not applicable for regions apart from India (IND). Allowed values are:<br><ul>
-          <li>`0` : Default: (No bias)
-          <li>`-1` : Rural
-          <li>`1` : Urban</ul>'
+          description: >-
+            "This parameter can be used to set Urban or Rural bias. A positive value sets the Urban bias and a negative value sets Rural bias. This optional parameter & its related effect on response is not applicable for regions apart from India (IND). Allowed values are:<br><ul>
+            <li>`0` : Default: (No bias)
+            <li>`-1` : Rural
+            <li>`1` : Urban</ul>"
           required: false
           allowEmptyValue: false
           example: 0
@@ -70,20 +71,21 @@ paths:
             type: integer
         - name: podFilter
           in: query
-          description: 'This parameter can be used to set admin level restriction. The result will be either the given admin level or equivalent admin or higher in the hierarchy. No lower admin will be considered for geocoding.This optional parameter & its related effect on response is not applicable for regions apart from India (IND). <br> Allowed values are:<br>
-          <li>`hno` : house number
-          <li>`hna` : house name
-          <li>`poi` : point of interest
-          <li>`street` : street
-          <li>`sslc` : sub sub locality
-          <li>`village` : village
-          <li>`slc` : sub locality
-          <li>`sdist` : sub district
-          <li>`loc` : locality
-          <li>`city` : city
-          <li>`dist` : district
-          <li>`pincode` :pincode
-          <li>`state` : state'
+          description: 
+            'This parameter can be used to set admin level restriction. The result will be either the given admin level or equivalent admin or higher in the hierarchy. No lower admin will be considered for geocoding.This optional parameter & its related effect on response is not applicable for regions apart from India (IND). <br> Allowed values are:<br>
+            <li>`hno` : house number
+            <li>`hna` : house name
+            <li>`poi` : point of interest
+            <li>`street` : street
+            <li>`sslc` : sub sub locality
+            <li>`village` : village
+            <li>`slc` : sub locality
+            <li>`sdist` : sub district
+            <li>`loc` : locality
+            <li>`city` : city
+            <li>`dist` : district
+            <li>`pincode` :pincode
+            <li>`state` : state'
           schema:
             type: string
         - name: bound
@@ -234,7 +236,7 @@ components:
           format: float
           example: 0.4
   securitySchemes:
-    BearerAuth: 
-      type: http
-      scheme: bearer
-      bearerFormat: 'bearer 0XXXXXXf-dXX0-4XX0-8XXa-eXXXXXXXXXX6'
+    staticKeyAuth: 
+      type: apiKey
+      in: query
+      name: access_token
