--- a/docs/custom/woodpecker.yml
+++ b/docs/custom/woodpecker.yml
@@ -3,7 +3,7 @@ info:
   title: Address Analytics API
   description: >-
     <strong>(erstwhile Address Standardization API)</strong><br><br>
-    This APIs follow OAuth2 based security. **To know more on how to create your authorization tokens, please use our authorization token URL. More details available**  [here](https://github.com/mappls-api/mappls-rest-apis/tree/main/mappls-token-generation-api).<br><br>The API leverages OAuth 2.0 based security. Hence, the developer would need to send a request for access token using their client_id and client_secret to the OAuth API. Once validated from the OAuth API, the access_token and the token_type need to be sent as Authorization header with the value: "{`token_type`} {`access_token`}”. <br><strong>Authorization</strong>: `token_type` `access_token`.<br><br> **Note**: <ol> <li> The response listed in the below documentation is ONLY indicative of the overall capabilities of Mappls's Search APIs. </li><li> Not all response parameters mentioned in the below documentation is assured to be present in all the use-cases. The response of any of the below search API is thus, dependent on the use-case agreed upon between Mappls & it's API consumer. </i><li> For any further clarifications on what all of the response structure is available for your use case, please contact your business relationship manager or contact Mappls API support.</li><li> <strong>PREMIUM APIs/Parameters</strong> are not available for evalulation on signup. To get access, please contact API Support.</li></ol>
+    Before using the API in the your solution, please ensure that the related access is enabled in the [Mappls Console](https://auth.mappls.com/console/), within your app - be it for Mobile OR Web or Cloud integration.<br><ol><li>Copy and paste the key from your `credentials` section from your API [keys](https://auth.mappls.com/console/) into the `access_token` query parameter.</li><br><ul><li>Your static key can be secured by whitelisting its usage for particular IPs (in case of cloud app usage) OR a set of domains (in case of a web app).</li><br><li>Your static key obtained from your Console is to be passed as a query parameter: `access_token`.</li></ul></ol><br> **Note**: <ol> <li> The response listed in the below documentation is ONLY indicative of the overall capabilities of Mappls's Search APIs. </li><li> Not all response parameters mentioned in the below documentation is assured to be present in all the use-cases. The response of any of the below search API is thus, dependent on the use-case agreed upon between Mappls & it's API consumer. </i><li> For any further clarifications on what all of the response structure is available for your use case, please contact your business relationship manager or contact Mappls API support.</li><li> <strong>PREMIUM APIs/Parameters</strong> are not available for evalulation on signup. To get access, please contact API Support.</li></ol>
   termsOfService: 'https://about.mappls.com/api/terms-&-conditions'
   version: 1.0.0
   license:
@@ -14,25 +14,25 @@ info:
     email: apisupport@mappls.com
     url: https://about.mappls.com/api/
 servers:
-  - url: 'https://atlas.mappls.com'
-    description: 'Live Prod server for OAuth 2 based APIs'
+  - url: 'https://search.mappls.com'
+    description: 'Live Prod server for APIs'
 security: 
   - BearerAuth: []
 paths:
-  /api/places/addressAnalytics:
+  /search/address/addressAnalytics:
       get:
         tags:
           - Address Analytics API
         description: >-
           MapmyIndia's Address Analytics API is a parsing and standardisation engine enabling a complete flow of address cleansing, extraction, validation and standardisation activities.<br><br>
-          The engine is trained on MapmyIndia’s Comprehensive Address Directory. Address directory is a unified data product representing India addresses at different level of granularity while keeping the hierarchical sanctity of each address. This API supports modular functions (cleansing / parsing / standardization) to utilize the workflow as per the business needs.<br><br>This APIs follow OAuth2 based security. **To know more on how to create your authorization tokens, please use our authorization token URL. More details available**  [here](https://github.com/mappls-api/mappls-rest-apis/tree/main/mappls-token-generation-api).
+          The engine is trained on MapmyIndia’s Comprehensive Address Directory. Address directory is a unified data product representing India addresses at different level of granularity while keeping the hierarchical sanctity of each address. This API supports modular functions (cleansing / parsing / standardization) to utilize the workflow as per the business needs.<br><br>
           <p style=text-align:right><strong><a href="https://mmi.mapmyindia.com/api/addressparser_demo/">Live Demo</a> </p>
         summary: >-
           Address Analytics API
         operationId: WoodpeckerAPI
         servers:
         - url: https://atlas.mappls.com
-          description: 'Live Prod server for OAuth 2 based APIs'
+          description: 'Live Prod server for APIs'
         parameters:
           # - name: Authorization
           #   in: header
@@ -201,7 +201,7 @@ components:
           format: string
           enum: ['careOf','floor','buildingNumber','poi/buildingName','street','landmark','subSubLocality','subLocality','locality',village','postOffice','subDistrict','district','city','state','pincode']
   securitySchemes:
-    BearerAuth: 
-      type: http
-      scheme: bearer
-      bearerFormat: 'bearer 0XXXXXXf-dXX0-4XX0-8XXa-eXXXXXXXXXX6'
+    staticKeyAuth: 
+      type: apiKey
+      in: query
+      name: access_token
