--- a/docs/custom/geolocation.yml
+++ b/docs/custom/geolocation.yml
@@ -2,7 +2,7 @@ openapi: 3.0.3
 info:
   title: Geolocation API
   description: >-
-    This APIs follow OAuth2 based security. **To know more on how to create your authorization tokens, please use our authorization token URL. More details available**  [here](https://github.com/mappls-api/mappls-rest-apis/tree/main/mappls-token-generation-api). <br><br>The API leverages OAuth 2.0 based security. Hence, the developer would need to send a request for access token using their client_id and client_secret to the OAuth API. Once validated from the OAuth API, the access_token and the token_type need to be sent as Authorization header with the value: "{`token_type`} {`access_token`}”. <br><strong>Authorization</strong>: `token_type` `access_token`.<br><br>**Note**: <ol> <li> The response listed in the below documentation is ONLY indicative of the overall capabilities of Mappls's Search APIs. </li><li> Not all response parameters mentioned in the below documentation is assured to be present in all the use-cases. The response of any of the below search API is thus, dependent on the use-case agreed upon between Mappls & it's API consumer. </i><li> For any further clarifications on what all of the response structure is available for your use case, please contact your business relationship manager or contact Mappls API support.</li><li> <strong>PREMIUM APIs/Parameters</strong> are not available for evalulation on signup. To get access, please contact API Support.</li><li><strong>A minimum of one cell tower object is required and a maximum of six cell tower objects are allowed as input.</strong></li><li><strong>To get the best result, a minimum of three cell tower objects should be input >  in accordance with one active and two latest historical cell info objects</strong></li></ol>
+    Before using the API in the your solution, please ensure that the related access is enabled in the [Mappls Console](https://auth.mappls.com/console/), within your app - be it for Mobile OR Web or Cloud integration.<br><ol><li>Copy and paste the key from your `credentials` section from your API [keys](https://auth.mappls.com/console/) into the `access_token` query parameter.</li><br><ul><li>Your static key can be secured by whitelisting its usage for particular IPs (in case of cloud app usage) OR a set of domains (in case of a web app).</li><br><li>Your static key obtained from your Console is to be passed as a query parameter: `access_token`.</li></ul></ol><br>**Note**: <ol> <li> The response listed in the below documentation is ONLY indicative of the overall capabilities of Mappls's Search APIs. </li><li> Not all response parameters mentioned in the below documentation is assured to be present in all the use-cases. The response of any of the below search API is thus, dependent on the use-case agreed upon between Mappls & it's API consumer. </i><li> For any further clarifications on what all of the response structure is available for your use case, please contact your business relationship manager or contact Mappls API support.</li><li> <strong>PREMIUM APIs/Parameters</strong> are not available for evalulation on signup. To get access, please contact API Support.</li><li><strong>A minimum of one cell tower object is required and a maximum of six cell tower objects are allowed as input.</strong></li><li><strong>To get the best result, a minimum of three cell tower objects should be input >  in accordance with one active and two latest historical cell info objects</strong></li></ol>
   termsOfService: 'https://about.mappls.com/api/terms-&-conditions'
   version: 1.0.0
   license:
@@ -12,17 +12,19 @@ info:
     name: Mappls API Support
     email: apisupport@mappls.com
     url: https://about.mappls.com/api/
+security: 
+  - staticKeyAuth: []
 servers:
-  - url: 'https://atlas.mappls.com'
-    description: 'Live Prod server for OAuth 2 based APIs'
+  - url: 'https://search.mappls.com'
+    description: 'Live Prod server for APIs'
 paths:
-  /api/places/geo-location:
+  /search/places/geo-location:
     post:
       tags: 
         - Geolocation API
       description: >-
         The Geolocation API returns a location on the basis of cell tower information that any mobile client can detect.<br>
-        Any mobile user will send the information of all the connected or recently connected cell towers information in the API, Now API will articulate approximate user location on the basis of the provided cell towers information. Mappls will use its cell towers geo-location database to calculate the approximate geo-location of the user.<br><br>This APIs follow OAuth2 based security. **To know more on how to create your authorization tokens, please use our authorization token URL. More details available**  [here](https://github.com/mappls-api/mappls-rest-apis/tree/main/mappls-token-generation-api).
+        Any mobile user will send the information of all the connected or recently connected cell towers information in the API, Now API will articulate approximate user location on the basis of the provided cell towers information. Mappls will use its cell towers geo-location database to calculate the approximate geo-location of the user.
       summary: >-
          Geolocation API
       operationId: GeolocationAPI
@@ -75,7 +77,7 @@ paths:
       deprecated: false
       # servers:
       #   - url: https://atlas.mapmyindia.com
-      #     description: 'Live Prod server for OAuth 2 based APIs'
+      #     description: 'Live Prod server for APIs'
 components:
   schemas:
     celltower:
@@ -113,6 +115,16 @@ components:
             description: >-
               The cell tower's Mobile Network Code. This is the MNC for GSM, WCDMA, LTE and NR.<br> Valid range for MNC: 0-999 and for SID: 0-32767
             format: string
+    accuracy: 
+      title: accuracy of the result.
+      type: object
+      required: 
+        - nearest
+      properties: 
+        nearest: 
+          type: integer
+          format: integer
+          example: 428
     location:
       title: estimated Location
       type: object
@@ -138,12 +150,14 @@ components:
       type: object
       required:
         - location
+        - accuracy
       properties:
         location:
           $ref: '#/components/schemas/location'
+        accuracy:
+          $ref: '#/components/schemas/accuracy'
   securitySchemes:
-    bearerAuth:
-      type: http
-      scheme: bearer
-security:
-  - bearerAuth: []
+    staticKeyAuth: 
+      type: apiKey
+      in: query
+      name: access_token
