--- a/docs/custom/isopolygon.yml
+++ b/docs/custom/isopolygon.yml
@@ -2,7 +2,7 @@ openapi: 3.0.3
 info:
   title: Driving Range Polygon API
   description: >-
-    This APIs follow OAuth2 based security. **To know more on how to create your authorization tokens, please use our authorization token URL. More details available**  [here](https://github.com/mappls-api/mappls-rest-apis/tree/main/mappls-token-generation-api). <br><br>The API leverages OAuth 2.0 based security. Hence, the developer would need to send a request for access token using their client_id and client_secret to the OAuth API. Once validated from the OAuth API, the access_token and the token_type need to be sent as Authorization header with the value: "{`token_type`} {`access_token`}”. <br><strong>Authorization</strong>: `token_type` `access_token`.<br><br> **Note**: <ol> <li> The response listed in the below documentation is ONLY indicative of the overall capabilities of Mappls's Search APIs. </li><li> Not all response parameters mentioned in the below documentation is assured to be present in all the use-cases. The response of any of the below search API is thus, dependent on the use-case agreed upon between Mappls (MapmyIndia) & it's API consumers. </i><li> For any further clarifications on what all of the response structure is available for your use case, please contact your business relationship manager or contact Mappls API support.</li><li> <strong>PREMIUM APIs</strong> are not available for evalulation on signup. To get access, please contact API Support.</li></ol>
+    Before using the API in the your solution, please ensure that the related access is enabled in the [Mappls Console](https://auth.mappls.com/console/), within your app - be it for Mobile OR Web or Cloud integration.<br><ol><li>Copy and paste the key from your `credentials` section from your API [keys](https://auth.mappls.com/console/) into the `access_token` query parameter.</li><br><ul><li>Your static key can be secured by whitelisting its usage for particular IPs (in case of cloud app usage) OR a set of domains (in case of a web app).</li><br><li>Your static key obtained from your Console is to be passed as a query parameter: `access_token`.</li></ul></ol><br> **Note**: <ol> <li> The response listed in the below documentation is ONLY indicative of the overall capabilities of Mappls's Search APIs. </li><li> Not all response parameters mentioned in the below documentation is assured to be present in all the use-cases. The response of any of the below search API is thus, dependent on the use-case agreed upon between Mappls (MapmyIndia) & it's API consumers. </i><li> For any further clarifications on what all of the response structure is available for your use case, please contact your business relationship manager or contact Mappls API support.</li><li> <strong>PREMIUM APIs</strong> are not available for evalulation on signup. To get access, please contact API Support.</li></ol>
   termsOfService: 'https://about.mappls.com/api/terms-&-conditions'
   version: 1.0.0
   license:
@@ -15,31 +15,31 @@ info:
 security: 
   - BearerAuth: []
 servers:
-        - url: https://apis.mappls.com
-          description: 'Live Prod server for OAuth 2 based APIs'
+  - url: https://route.mappls.com
+    description: 'Live Prod server for APIs'
 paths:
-  /advancedmaps/v2/isopolygon: 
+  /routev2/optimization/isopolygon: 
     get:
         tags:
           - Driving Range Polygon API
         description: >-
-          Mappls Driving Range Polygon API computes areas that are reachable within specified time or distance intervals from a location, and returns the reachable regions as contours of polygons or lines that you can display on a map. This create the drive time polygons that use actual street networks based on given distance or time. This is required in order to quickly determine how much time or distance one will need to get to other locations on map and in specified time where can he reached.<br>This APIs follow OAuth2 based security. **To know more on how to create your authorization tokens, please use our authorization token URL. More details available**  [here](https://github.com/mappls-api/mappls-rest-apis/tree/main/mappls-token-generation-api)
+          Mappls Driving Range Polygon API computes areas that are reachable within specified time or distance intervals from a location, and returns the reachable regions as contours of polygons or lines that you can display on a map. This create the drive time polygons that use actual street networks based on given distance or time. This is required in order to quickly determine how much time or distance one will need to get to other locations on map and in specified time where can he reached.
         summary: >-
           Driving Range Polygon API
         operationId: isopolygon
         servers:
-        - url: https://apis.mappls.com
-          description: 'Live Prod server for OAuth 2 based APIs'
+        - url: https://route.mappls.com
+          description: 'Live Prod server for APIs'
         parameters:
-          - name: Authorization
-            in: header
-            description: >-
-              Authorization header with the value: “{token_type} {access_token}”. <br> Please generate your token from token generation API before calling this API.
-            required: true
-            allowEmptyValue: false
-            schema:
-              type: string
-            example: "bearer 0XXXXXXf-dXX0-4XX0-8XXa-eXXXXXXXXXX6"
+          # - name: Authorization
+          #   in: header
+          #   description: >-
+          #     Authorization header with the value: “{token_type} {access_token}”. <br> Please generate your token from token generation API before calling this API.
+          #   required: true
+          #   allowEmptyValue: false
+          #   schema:
+          #     type: string
+          #   example: "bearer 0XXXXXXf-dXX0-4XX0-8XXa-eXXXXXXXXXX6"
           - name: locations
             in: query
             description: >-
@@ -169,10 +169,8 @@ paths:
             description: Internal server error
         deprecated: false
 components:
-  # schemas:
-  
   securitySchemes:
-    BearerAuth: 
-      type: http
-      scheme: bearer
-      bearerFormat: 'bearer 0XXXXXXf-dXX0-4XX0-8XXa-eXXXXXXXXXX6'
+    staticKeyAuth: 
+      type: apiKey
+      in: query
+      name: access_token
