--- a/docs/custom/placeDetail-adv.yml
+++ b/docs/custom/placeDetail-adv.yml
@@ -2,7 +2,7 @@ openapi: 3.0.3
 info:
   title: Place Detail API
   description: >-
-    This APIs follow OAuth2 based security. **To know more on how to create your authorization tokens, please use our authorization token URL. More details available**  [here](https://github.com/mappls-api/mappls-rest-apis/tree/main/mappls-token-generation-api). <br><br>
+    Before using the API in the your solution, please ensure that the related access is enabled in the [Mappls Console](https://auth.mappls.com/console/), within your app - be it for Mobile OR Web or Cloud integration.<br><ol><li>Copy and paste the key from your `credentials` section from your API [keys](https://auth.mappls.com/console/) into the `access_token` query parameter.</li><br><ul><li>Your static key can be secured by whitelisting its usage for particular IPs (in case of cloud app usage) OR a set of domains (in case of a web app).</li><br><li>Your static key obtained from your Console is to be passed as a query parameter: `access_token`.</li></ul></ol><br>
     **Note**: <ol> <li> The response listed in the below documentation is ONLY indicative of the overall capabilities of Mappls's Search APIs. </li><li> Not all response parameters mentioned in the below documentation is assured to be present in all the use-cases. The response of any of the below search API is thus, dependent on the use-case agreed upon between Mappls & it's API consumer. </i><li> For any further clarifications on what all of the response structure is available for your use case, please contact your business relationship manager or contact Mappls API support.</li><li> <strong>PREMIUM APIs</strong> are not available for evalulation on signup. To get access, please contact API Support.</li></ol>
   termsOfService: 'https://about.mappls.com/api/terms-&-conditions'
   version: 1.0.0
@@ -16,7 +16,7 @@ info:
 security: 
   - BearerAuth: []
 servers:
-  - url: 'https://explore.mappls.com'
+  - url: 'https://place.mappls.com'
     description: 'Live Prod server for Place Detail API'
 paths:
   /apis/O2O/entity/{eLoc}:
@@ -24,15 +24,12 @@ paths:
         tags:
           - Place Detail API
         description: >-
-          Mappls eloc is a simple, standardized and precise pan-India digital address system. Every location has been assigned a unique digital address or an eLoc. Place Detail API can be used to extract the details of a place with the help of its eLoc i.e. a 6 digit code or a place_id.
-          <br>This APIs follow OAuth2 based security. **To know more on how to create your authorization tokens, please use our authorization token URL. More details available**  [here](https://github.com/mappls-api/mappls-rest-apis/tree/main/mappls-token-generation-api).
-          <br>The API leverages OAuth 2.0 based security. Hence, the developer would need to send a request for access token using their client_id and client_secret to the OAuth API. Once validated from the OAuth API, the access_token and the token_type need to be sent as Authorization header with the value: "{`token_type`} {`access_token`}”. <br><strong>Authorization</strong>: `token_type` `access_token`.
-# <p style=text-align:right><strong><a href="https://www.mapmyindia.com/api/advanced-maps/doc/sample/mapmyindia-vector-maps-place-details-api-example.php">Live Demo</a> | <a href="https://github.com/MapmyIndia/mapmyindia-rest-api/tree/master/mapmyindia-maps-place-details-api-example">Download Sample Code</a> </p>
+          Mappls eloc is a simple, standardized and precise pan-India digital address system. Every location has been assigned a unique digital address or an eLoc. Place Detail API can be used to extract the details of a place with the help of its eLoc i.e. a 6 digit code or a place_id.          
         summary: >-
           Place Detail API
         operationId: placeDetail
         servers:
-        - url: https://explore.mappls.com
+        - url: https://place.mappls.com
           description: 'Live Prod server for Place Detail API'
         parameters:
           - name: eLoc
@@ -283,7 +280,7 @@ components:
           description: 'The type of keyinfo object.'
           format: string
   securitySchemes:
-    BearerAuth: 
-      type: http
-      scheme: bearer
-      bearerFormat: 'bearer 0XXXXXXf-dXX0-4XX0-8XXa-eXXXXXXXXXX6'
+    staticKeyAuth: 
+      type: apiKey
+      in: query
+      name: access_token
