--- a/docs/custom/predictiveETA.yml
+++ b/docs/custom/predictiveETA.yml
@@ -2,7 +2,7 @@ openapi: 3.0.3
 info:
   title: Distance Matrix Predictive API
   description: >-
-    This APIs follow OAuth2 based security. **To know more on how to create your authorization tokens, please use our authorization token URL. More details available**  [here](https://github.com/mappls-api/mappls-rest-apis/tree/main/mappls-token-generation-api). <br><br>The API leverages OAuth 2.0 based security. Hence, the developer would need to send a request for access token using their client_id and client_secret to the OAuth API. Once validated from the OAuth API, the access_token and the token_type need to be sent as Authorization header with the value: "{`token_type`} {`access_token`}”. <br><strong>Authorization</strong>: `token_type` `access_token`. <br><br>
+    Before using the API in the your solution, please ensure that the related access is enabled in the [Mappls Console](https://auth.mappls.com/console/), within your app - be it for Mobile OR Web or Cloud integration.<br><ol><li>Copy and paste the key from your `credentials` section from your API [keys](https://auth.mappls.com/console/) into the `access_token` query parameter.</li><br><ul><li>Your static key can be secured by whitelisting its usage for particular IPs (in case of cloud app usage) OR a set of domains (in case of a web app).</li><br><li>Your static key obtained from your Console is to be passed as a query parameter: `access_token`.</li></ul></ol><br>
     **Note**: <ol> <li> The response listed in the below documentation is ONLY indicative of the overall capabilities of Mappls's Routing APIs. </li><li> Not all response parameters mentioned in the below documentation is assured to be present in all the use-cases. The response of any of the below search API is thus, dependent on the use-case agreed upon between Mappls & it's API consumer. </i><li> For any further clarifications on what all of the response structure is available for your use case, please contact your business relationship manager or contact Mappls API support.</li><li> <strong>PREMIUM APIs</strong> are not available for evalulation on signup. To get access, please contact API Support.</li></ol>
   termsOfService: 'https://about.mappls.com/api/terms-&-conditions'
   version: 2.0.0
@@ -14,10 +14,10 @@ info:
     email: apisupport@mappls.com
     url: https://about.mappls.com/api/
 servers:
-  - url: https://apis.mappls.com/advancedmaps/v2
+  - url: https://route.mappls.com
     description: 'Live Prod server for Distance Matrix Predictive API'
 paths:
-  /distance:
+  /routev2/dm/distance:
     get: 
       tags: 
         - Distance Matrix Predictive API
@@ -25,7 +25,6 @@ paths:
         This API computes the distance and duration of a route between a set of source positions and a set of supplied target or destination positions.
         Optionally one can specify the `date_time` parameter and get the distance and duration optimized for that part of day of a week. Time based functionality is available for selected areas only.
         Supported region (countries) is India at the moment. Please note that maximum number of points are limited to 100 only including source and destination positions.
-        <br><br>This APIs follow OAuth2 based security. **To know more on how to create your authorization tokens, please use our authorization token URL. More details available**  [here](https://github.com/mappls-api/mappls-rest-apis/tree/main/mappls-token-generation-api).
         <p style=text-align:right><strong>PREMIUM API* </p>
       summary: Distance Matrix Predictive ETA API
       operationId: dmPAPI
@@ -219,4 +218,8 @@ components:
             Latitude of the target in degrees.
           type: number
           example: 28.555391
-    
+  securitySchemes:
+    staticKeyAuth: 
+      type: apiKey
+      in: query
+      name: access_token  
