--- a/docs/custom/StillMapImageAPI.yml
+++ b/docs/custom/StillMapImageAPI.yml
@@ -2,6 +2,7 @@ openapi: 3.0.3
 info:
   title: Still Map Image API
   description: >-
+    Before using the API in the your solution, please ensure that the related access is enabled in the [Mappls Console](https://auth.mappls.com/console/), within your app - be it for Mobile OR Web or Cloud integration.<br><ol><li>Copy and paste the key from your `credentials` section from your API [keys](https://auth.mappls.com/console/) into the `access_token` query parameter.</li><br><ul><li>Your static key can be secured by whitelisting its usage for particular IPs (in case of cloud app usage) OR a set of domains (in case of a web app).</li><br><li>Your static key obtained from your Console is to be passed as a query parameter: `access_token`.</li></ul></ol><br>
     **Note**: <ol> <li> The response listed in the below documentation is ONLY indicative of the overall capabilities of Mappls's Maps APIs. </li><li> Not all response parameters mentioned in the below documentation is assured to be present in all the use-cases. The response of any of the below search API is thus, dependent on the use-case agreed upon between Mappls & it's API consumer. </i><li> For any further clarifications on what all of the response structure is available for your use case, please contact your business relationship manager or contact Mappls API support.</li><li> <strong>PREMIUM APIs</strong> are not available for evalulation on signup. To get access, please contact API Support.</li></ol>
   termsOfService: 'https://about.mappls.com/api/terms-&-conditions'
   version: 1.0.0
@@ -13,10 +14,12 @@ info:
     email: apisupport@mappls.com
     url: https://about.mappls.com/api/
 servers:
-  - url: https://apis.mappls.com/advancedmaps/v1
-    description: 'Live Prod server for Still Map Image API'
+  - url: https://tile.mappls.com
+    description: 'Live Prod server for Traveled Route Image API'
+security: 
+  - staticKeyAuth: []
 paths:
-  /{REST_KEY}/still_image:
+  /map/raster_tile/still_image:
       get:
         tags:
           - Still Map Image API
@@ -34,14 +37,14 @@ paths:
             example: "28.5959394,77.2255611"
             schema:
               type: string
-          - name: REST_KEY
-            in: path
-            description: 'The REST API licence key allocated to you by signing into our services and registering yourself as a developer.'
-            allowEmptyValue: false
-            required: true
-            example: "threstapikeywillcomeheretoaccess"
-            schema:
-              type: string
+          # - name: REST_KEY
+          #   in: path
+          #   description: 'The REST API licence key allocated to you by signing into our services and registering yourself as a developer.'
+          #   allowEmptyValue: false
+          #   required: true
+          #   example: "threstapikeywillcomeheretoaccess"
+          #   schema:
+          #     type: string
           - name: zoom
             in: query
             description: 'The zoom level for which the image is requested. Ranges from 4 to 18 with 18 being the highest zoomed in level.'
@@ -82,12 +85,13 @@ paths:
               type: string
         responses:
           '200':
-            description: OK
+            description: >-
+              <img src="https://mappls-api.github.io/mappls-rest-apis/custom/stillMapImageResponse.png" alt="Mappls Still Image Polyline Response" style="max-width: 100%; height: auto; border-radius: 8px;">
             content:
               image/png:
                 schema:
                   format: binary
-                  example: "https://kunalbharti.github.io/mapmyindia-rest-api-beta/custom/stillMapImageResponse.png"
+                  example: "https://mappls-api.github.io/mappls-rest-apis/custom/stillMapImageResponse.png"
           '204':
             description: Not found
           '400':
@@ -101,3 +105,9 @@ paths:
           '503':
             description: Internal server error
         deprecated: false
+components:  
+  securitySchemes:
+    staticKeyAuth: 
+      type: apiKey
+      in: query
+      name: access_token
